Hay un problema con los comentarios, se requiere recuperar los datos del comentario realizados por el usuario, mejora de index

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -15,7 +15,7 @@ Pagina principal del sistema Jordan.
 
             <h:form>
                 <h3>Top 5</h3>
-                <p:accordionPanel activeIndex="0,1,2,3,4" multiple="true" 
+                <p:accordionPanel activeIndex="0,1,2,3,4" multiple="true" style="width: 90%;margin-left: 5%"
                                   value="#{controladorLocal.top5}" var="_local" >
                     <p:tab title="" >
                         <h:panelGrid columns="2" width="20%" style="float: left">
