--- a/src/main/webapp/local.xhtml
+++ b/src/main/webapp/local.xhtml
@@ -102,9 +102,20 @@ Pagina que muestra la información de un local.
                     <p:inputTextarea id="comentario" style="width:99%" rows="2" placeholder="Comentario" 
                                      value="#{controladorLocal.comentario.comentario}"/>
                 </h:panelGrid>
-                <p:commandButton value="Publicar" update=":publicacion @form" ajax="true"
+                <p:commandButton value="Publicar" update=":publicacion @form" ajax="true" style="float: left"
                                  onclick="publicaMensaje($('textarea[id=&quot;Coment:comentario&quot;]')[0].value)"
                                  actionListener="#{controladorLocal.guardarComentario(controladorLogeo.nombre)}"/>
+                <h:panelGrid columns="3" cellpadding="10" style="float: right; left: 20%">
+                    <p:outputLabel value="Compartir en: "/> 
+                    
+                    <p:commandLink onclick="publicaMensaje($('textarea[id=&quot;Coment:comentario&quot;]')[0].value)">
+                        <h:graphicImage width="50" height="50" name="facebook.png" library="imag"/> 
+                    </p:commandLink>
+                    <h:commandLink action="local.xhtml" actionListener="#{controladorLocal.setLocal(_local)}">
+                        <h:graphicImage width="50" height="50" name="twitter.png" library="imag"/> 
+                    </h:commandLink>
+                </h:panelGrid>
+                <br/><br/>
             </h:form><br/>
             <h:form id="publicacion" style="width: 100%">
                 <p:dataScroller value="#{controladorLocal.local.comentarios}" 
