--- a/src/main/webapp/local.xhtml
+++ b/src/main/webapp/local.xhtml
@@ -96,15 +96,18 @@ Pagina que muestra la información de un local.
                         <h:outputText value="Comentario"/>
                         <h:panelGrid columns="2" cellpadding="5" style="text-align: right">
                             <h:outputText value="Puntuación: " />
-                            <p:rating value="#{controladorLocal.comentario.calificación}"/>
+                            <p:rating value="4"/>
+                            <!--p:rating value="#{controladorLocal.comentario.calificación}"/-->
                         </h:panelGrid>
                     </h:panelGrid>
                     <p:inputTextarea id="comentario" style="width:99%" rows="2" placeholder="Comentario" 
-                                     value="#{controladorLocal.comentario.comentario}"/>
+                                     value="comentario ..."/>
+                    <!--p:inputTextarea id="comentario" style="width:99%" rows="2" placeholder="Comentario" 
+                                     value="{controladorLocal.comentario.comentario}"/-->
                 </h:panelGrid>
                 <p:commandButton 
                     value="Publicar" update=":publicacion @form" ajax="true" style="float: left"
-                    actionListener="#{controladorLocal.guardarComentario(controladorLogeo.nombre)}"
+                    actionListener="{controladorLocal.guardarComentario(controladorLogeo.nombre)}"
                     onsuccess="PF('redes').show();"
                     />
                 <br/><br/>
@@ -126,14 +129,18 @@ Pagina que muestra la información de un local.
                 </div>
             </p:dialog>
             <h:form id="publicacion" style="width: 100%">
-                <p:dataScroller value="#{controladorLocal.local.comentarios}" 
-                                var="_comentario" chunkSize="5"  style="width: 100%">
+                <p:dataScroller value="#{controladorUsuario.usuarios}" 
+                                var="_usuario" chunkSize="5"  style="width: 100%">
                     <f:facet name="header" >
                         COMENTARIOS
                     </f:facet>
-                    <h:panelGrid columns="2">
-                        <p:outputLabel value="#{_comentario.comentario}" />
-                    </h:panelGrid>
+                    <p:panelGrid columns="3" style="width: 100%">
+                        <p:outputLabel value="USUARIO: " />
+                        <p:outputLabel value="Comentario realizado por el usuario..." />
+                        <p:commandButton rendered="#{controladorLogeo.esAdministrador()}" 
+                                         value="Borrar" style="width: 100px; float: right; margin-right: 10%"/>
+                    </p:panelGrid>
+                    
                 </p:dataScroller>
             </h:form><br/>
         </ui:define>
